# makatime

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yaml
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/server/: .gitignore  Cargo.toml  wrangler.toml
crates/server/src/: lib.rs
crates/server/src/objects/: user.rs
crates/server/src/routes/: mod.rs
