[workspace]
members = [
    "crates/client",
    "crates/server"
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
base64ct = { version = "1.8.0", features = ["alloc"] }
clap = { version = "4.5.46", features = ["derive", "env"] }
http = "1.3.1"
headers = "0.4.1"
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
spacebadgers = "1.3.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ureq = { version = "3.0.12", features = ["json"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
worker = { version = "0.5.0", features = ["http"] }
worker-macros = "0.5.0"
