[package]
name = "makatime-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
clap.workspace = true
objc2.workspace = true
objc2-app-kit.workspace = true
objc2-foundation.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ureq.workspace = true
