[package]
name = "makatime-server"
version = "0.1.0"
edition.workspace = true

[package.metadata.release]
release = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait.workspace = true
base64ct.workspace = true
http.workspace = true
headers.workspace = true
serde.workspace = true
serde_json.workspace = true
spacebadgers.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
worker.workspace = true
worker-macros.workspace = true
